--- a/timezone-clock/assets/css/style.css
+++ b/timezone-clock/assets/css/style.css
@@ -3,3 +3,50 @@ body {
   background-color: rgb(23, 23, 23);
   color: #fff;
 }
+
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 90%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 10rem;
+  margin: 0;
+}
+
+p {
+  width: 100%;
+  text-align: right;
+}
+
+.timezone {
+  font-size: 2rem;
+  margin: 0;
+  color: #999;
+  font-style: italic;
+}
+
+.date {
+  font-size: 2rem;
+  margin: 0;
+  font-family: monospace;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 6rem;
+  }
+  .timezone {
+    font-size: 1rem;
+  }
+  .date {
+    font-size: 1rem;
+  }
+}
