--- a/qr-code-component/css/style.css
+++ b/qr-code-component/css/style.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-size: 15px;
   font-family: 'Outfit', sans-serif;
+  color: hsl(220, 15%, 55%);
+  text-align: center;
 }
 
 .container {
@@ -26,4 +28,10 @@ body {
 .qr-code {
   max-width: 100%;
   border-radius: 8px;
+}
+
+.qr-card-header {
+  font-weight: 700;
+  font-size: 22px;
+  color: hsl(218, 44%, 22%);
 }
